// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlayer renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="video-player-component"
  id="video-player-without-text"
>
  <div
    className="css-1xdhyk6"
    id="video-player-without-text-componentWrapper-wrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
  data-testid="video-player-component"
  id="video-player-with-text"
>
  <div
    className="css-1xdhyk6"
    id="video-player-with-text-componentWrapper-wrapper"
  >
    <h2
      className="chakra-heading css-1uhtpq1"
      id="video-player-with-text-componentWrapper-heading"
    >
      VideoPlayer Heading
    </h2>
    <p
      className="chakra-text css-ap6r8h"
    >
      VideoPlayer description
    </p>
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="video-player-with-text-componentWrapper-helperText"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "VideoPlayer helper test.",
          }
        }
      />
    </div>
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
  data-testid="video-player-component"
  id="video-player-with-text"
>
  <div
    className="css-1xdhyk6"
    id="video-player-with-text-componentWrapper-wrapper"
  >
    <h2
      className="chakra-heading css-1uhtpq1"
      id="video-player-with-text-componentWrapper-heading"
    >
      VideoPlayer Heading
    </h2>
    <p
      className="chakra-text css-ap6r8h"
    >
      VideoPlayer description
    </p>
    <div
      className="css-0"
    >
      <span
        dangerouslySetInnerHTML={
          {
            "__html": "<iframe title="Video player" src='https://player.vimeo.com/video/421404144?h=5467db7edd' width='640' height='360' frameborder='0' allow='autoplay; fullscreen; picture-in-picture' allowfullscreen></iframe>",
          }
        }
      />
    </div>
    <div
      aria-atomic={true}
      aria-live="polite"
      className="css-1xdhyk6"
      data-isinvalid={false}
      id="video-player-with-text-componentWrapper-helperText"
    >
      <div
        className="css-0"
        dangerouslySetInnerHTML={
          {
            "__html": "VideoPlayer helper test.",
          }
        }
      />
    </div>
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
  data-testid="video-player-component"
  id="video-player-error"
>
  <span
    dangerouslySetInnerHTML={
      {
        "__html": "<strong>Error:</strong> This video player has not been configured properly. Please contact the site administrator.",
      }
    }
  />
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 5`] = `
<div
  className="css-kle7zy"
  data-testid="video-player-component"
  id="chakra"
>
  <div
    className="css-1xdhyk6"
    id="chakra-componentWrapper-wrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;

exports[`VideoPlayer renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
  id="props"
>
  <div
    className="css-1xdhyk6"
    id="props-componentWrapper-wrapper"
  >
    <div
      className="css-0"
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; fullscreen; gyroscope; picture-in-picture"
        allowFullScreen={true}
        className="css-0"
        frameBorder="0"
        src="https://player.vimeo.com/video/474719268?autoplay=0&loop=0"
        title="Vimeo video player"
      />
    </div>
  </div>
  <noscript>
    <div
      style={
        {
          "backgroundColor": "var(--nypl-colors-ui-bg-default)",
          "border": "1px solid var(--nypl-colors-ui-border-default)",
          "height": "auto",
          "margin": "1rem 0",
          "padding": "var(--nypl-space-s)",
        }
      }
    >
      The video player requires JavaScript to function. Please enable JavaScript in your browser settings and refresh the page.
    </div>
  </noscript>
</div>
`;
